# span

./: .gitignore  Makefile  README.md  notes.txt
.cursor/commands/: gen-go-test.md  recover.md
.cursor/rules/: 001-global.mdc  020-go-code-style.mdc  021-proto-code-style.mdc
.devcontainer/: Dockerfile  devcontainer.json
docker/: Dockerfile  README.md  source_me.sh
docker/base/: Dockerfile  README.md  attach_shell.sh  build.sh  cmd.sh  docker_cmd.sh  logs.sh  run.sh  setup.sh  source_me.sh
docker/dev/: Dockerfile  README.md  build.sh  check_env.sh  docker_cmd.sh  remove.sh  run.sh  setup.sh  source_me.sh
docker/scripts/: attach_shell.sh  check_env.sh  cmd.sh  logs.sh  remove.sh
misc/: compile_commands.json  member_decl.cpp  notes.txt  test.dot  test_prog_00.c  test_prog_00.c.spanir  test_prog_01.c  test_prog_01.c.spanir
prompts/: 001-initial-project.md
scripts/: list_apis_simple.sh  run_in_docker.sh
slang/: CMakeLists.txt  run-tests.py
slang/src/: genir.cpp  main.cpp  main.h  main_copy.cpp  spir.pb.cc  spir.pb.h  util.cpp  util.h
slang/test/: README.md  globals_basic.c  globals_ptr.c  hello_world.c  lit.cfg.py  proto_001.c  run-tests.py  slang_on_multifiles.c  slang_on_src.c
slang/test/automated/: <stdin>.spanir  error.sh  spanTest001.c  spanTest002.c  spanTest002.c.spanir  spanTest002.plist  spanTest011.plist  spanTest023.c  spanTest024.c  spanTest025.c  spanTest025.c.spanir  spanTest027.plist  spanTest052.c  spanTest052.c.results.py  spanTest052.c.spanir  spanTest102.c  spanTest102.c.spanir  spanTest102.plist  spanTest113.c.results.py  spanTest113.c.spanir  spanTest161.c.spanir  spanTest162.plist  spanTest165.c  spanTest165.c.spanir  spanTest166.c  spanTest166.c.spanir  spanTest167.c  spanTest168.c.spanir  spanTest168.plist  spanTest169.c.spanir  spanTest169.plist  spanTest170.plist  spanTest172.c  spanTest204.c.spanir
slang/test/manual/: README.md
slang/test/manual/multiple-src-files/: bar.c  compile_commands.json  foo.c  test.sh
slang/test/manual/multiple-src-files/zar/: zar.c  zar.c.spir.proto
slang/test/src/: .spanTest207.c.swp  README.md  spanTest001.c.results.py  spanTest001.c.spanir  spanTest002.c.results.py  spanTest004.c  spanTest005.c  spanTest010.c  spanTest010.c.spanir  spanTest011.c.spanir  spanTest012.c  spanTest013.c  spanTest013.c.spanir  spanTest021.c  spanTest021.c.spanir  spanTest022.c.results.py  spanTest022.c.spanir  spanTest024.c  spanTest024.c.results.py  spanTest024.c.spanir  spanTest024.plist  spanTest027.c.spanir  spanTest102.c.results.py  spanTest113.c  spanTest160.c  spanTest160.c.spanir  spanTest161.c.results.py  spanTest162.c.spanir  spanTest167.c.results.py  spanTest167.c.spanir  spanTest168.c  spanTest169.c  spanTest170.c  spanTest170.c.results.py  spanTest170.c.spanir  spanTest171.c.results.py  spanTest171.c.spanir  spanTest172.c.spanir  spanTest173.c.spanir  spanTest204.c  (+7 more)
slang/test/switch_case/: hello_world.c
span/: Makefile.api  go.mod  go.sum
span-project/: .pylintrc  LICENSE  README.md  main.py  spell.dic
span-project/misc/: README.md  analysis.py  reach.py  reachingdef.py  serialize.py  sign.py  spanir.proto  (+1 more)
(+704 files in other folders)
